[package]
name = "enum-switcher-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "0a82b127eac325c9c721364a5d81f1bfd931cb13" }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", rev = "65157a8aa82ca87663dcbd936a8a3eef27729427" }
